--- a/styles/variables-base.less
+++ b/styles/variables-base.less
@@ -172,7 +172,6 @@
 // ---------------------------------------
 @agate-datetimepicker-divider-height: inherit;
 @agate-datetimepicker-divider-width: inherit;
-@agate-datetimepicker-width: 699px;
 
 // Dropdown
 // ---------------------------------------
@@ -457,7 +456,7 @@
 @agate-picker-active-font-size: 36px;
 @agate-picker-active-font-weight: @agate-base-font-weight;
 @agate-picker-margin: 0;
-@agate-picker-padding: @agate-component-spacing;
+@agate-picker-padding: 6px;
 
 // Popup
 // ---------------------------------------
